# english-coach-claude-code

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODOS.md  pyproject.toml  server.py
docs/: PLAN.md  architecture_english_coach.md  designs_english_coach.md
english_coach/: config.py  corrector.py  db.py  hook.py  jsonl_reader.py  language.py
static/: index.html
tests/: test_corrector.py  test_db.py  test_hook.py  test_jsonl_reader.py  test_language.py  test_server.py
