[project]
name = "english-coach"
version = "0.1.0"
description = "English learning sidebar for Claude Code sessions"
readme = "README.md"
authors = [
    { name = "Tsuyoshi Tanaka", email = "tanakatsu1080@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.96.0",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.44.0",
]

[tool.hatch.build.targets.wheel]
packages = ["english_coach"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
